# cmr_msgs

./: CMakeLists.txt  package.xml
action/: CallSupervisor.action  SetLedExpression.action  SpeechToText.action  TextToSpeech.action
msg/: DemoPause.msg  EyeFollowerPerson.msg  EyeFollowerPersons.msg  FireExtinguisherLog.msg  LEDExpression.msg  LEDStrips.msg  LimbNum.msg  Location.msg  NLPAnswer.msg  NavState.msg  PoseAndGoalReached.msg  Sentiment.msg  ShowFragment.msg  blockedDirectionTime.msg
srv/: ConversationTrigger.srv  NLP.srv  NavGoals.srv  SendEmail.srv  SendMessage.srv  SetLEDExpression.srv  getLocations.srv  setUSCollision.srv
